--- a/metadata.yaml
+++ b/metadata.yaml
@@ -26,5 +26,6 @@ rights_url: http://creativecommons.org/about/pdm
 subjects:
 - !lcc 'PQ'
 - !lcsh 'French fiction -- 19th century'
+- GITenberg
 title: Charlie
 url: http://www.gutenberg.org/ebooks/44468
